# gpu-programming-template

./: .clangd  CMakeLists.txt  Makefile  README.md  config_cmake.sh  load_module.sh  main.cu  queue.sh
